# pingora_ingress

./: .gitignore  Cargo.toml  Dockerfile  README.md  cmd.sh
.github/workflows/: docker-image.yml
deploy/: config_map.yaml  ingress.yaml  pingora-ingress-ctl-src.yaml  pingora_ingress_ctl.yaml  role.yaml
src/: main.rs
src/infra/: mod.rs  url_tree.rs
src/pkg/: ingress.rs  mod.rs  pod.rs
src/service/: config.rs  http_proxy.rs  mod.rs
